    coordinates, and the conversion call is an error.  This bug
    surfaces when you have OGL on a scrollwin, and you are far from
    the origin of the canvas.

    The second change in _composit.py basically removes the assumption
    that the child is in both self._children and self._divisions.
    Causes many problems when it's not.  ;)





2.5.3.1
-------

wxMac focus and border refreshes corrected.

Updated internal PNG library.

wxMac fix for metal appearance on wx.ToolBar.

wx.grid.Grid fix allowing DoGetBestSize to be called before CreateGrid
(which means that a min size doesn't need to be specified.)

wxMac fix for not sending a native click to a control if it is not
enabled (does an enable itself)

Added wx.lib.ogl.DrawnShape, and fixed various little bugs in the new
OGL. 

Added support to XRC and XRCed for the 3-state checkbox flags and also
for wx.ToggleButton.  Updated the generic window styles supported by
XRCed. 

It is now possible to create "stock" buttons.  Basically this means
that you only have to provide one of the stock IDs (and either an
empty label or a label that matches the stock label) when creating the
button and wxWidgets will choose the stock label to go with it
automatically.  Additionally on the platforms that have a native
concept of a stock button (currently only GTK2) then the native stock
button will be used.  For example, the following will result in a
button with "Cancel" as the label and an accelerator on the "C", and
if run on wxGTK2 then there will also be an image of a red X::

       b = wx.Button(parent, wx.ID_CANCEL) 


Added wx.lib.ticker.Ticker class from Chris Mellon.

Fix some incorrect clipping regions in wxSTC on wxGTK.

Added wrapper for wx.grid.Grid.GetOrCreateCellAttr.

Removed my copy of distutils from the wxPython source tree.  Now that
I am no longer doing builds on Python 2.1 the newest distutils is no
longer needed.  (There is still one small bug in Python 2.2 distutils